--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,3 +27,7 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:hover {
 	background: rgb(255 255 255 / 0.6);
 }
+
+[v-cloak] {
+  display: none;
+}
